manifests/app/quarkus-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quarkus-postgres
    app.kubernetes.io/component: quarkus-postgres
    app.kubernetes.io/instance: quarkus-postgres
    app.kubernetes.io/name: quarkus-postgres
    app.kubernetes.io/part-of: quarkus-postgres
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
  name: quarkus-postgres
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: quarkus-postgres
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: quarkus-postgres
        deployment: quarkus-postgres
    spec:
      containers:
      - env:
        - name: quarkus.datasource.username
          value: quarkus
        - name: quarkus.datasource.password
          value: quarkus
        - name: quarkus.datasource.jdbc.url
          value: jdbc:postgresql://postgresql:5432/quarkusdb
        - name: quarkus.hibernate-orm.database.generation
          value: update
        image: quay.io/pittar/quarkus-postgres:latest
        imagePullPolicy: Always
        name: quarkus-postgres
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
