manifests/app/quarkus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-postgres
    app.kubernetes.io/component: quarkus-postgres
    app.kubernetes.io/instance: quarkus-postgres
    app.kubernetes.io/name: quarkus-postgres
    app.kubernetes.io/part-of: quarkus-postgres
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
  name: quarkus-postgres
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: quarkus-postgres
    weight: 100
  wildcardPolicy: None
